--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,6 +1,8 @@
 development:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: eventAPP_development
+
 
 test:
   adapter: test
