--- a/config/cable.yml
+++ b/config/cable.yml
@@ -9,5 +9,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV.fetch("REDIS_URL") { "redis://h:asdfqwer1234asdf@ec2-111-1-1-1.compute-1.amazonaws.com:111" } %>
   channel_prefix: eventAPP_production
